--- a/.github/workflows/aws3_lambda.yml
+++ b/.github/workflows/aws3_lambda.yml
@@ -24,4 +24,15 @@ jobs:
        uses: actions/upload-artifact@v4.6.1
        with:
         name: spring-aws-s3-lambda
-        path: Spring_AWS3_Lambda/target/*.zip   
+        path: Spring_AWS3_Lambda/target/*.zip
+        
+     - name: Upload to AWS S3
+       uses: jakejarvis/s3-sync-action@master
+       with:
+        args: --acl public-read --follow-symlinks --delete
+       env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'ap-southeast-1'   # optional: defaults to ap-southeast-1
+        SOURCE_DIR: 'Spring_AWS3_Lambda/target/*.zip'    # optional: defaults to entire repository
