--- a/.github/workflows/aws3_lambda.yml
+++ b/.github/workflows/aws3_lambda.yml
@@ -26,6 +26,7 @@ jobs:
         name: spring-aws-s3-lambda
         path: Spring_AWS3_Lambda/target/*.zip
  deploy:
+   needs: build
    runs-on: ubuntu-latest
    steps:
      - name: download zip file
