--- a/.github/workflows/aws3_lambda.yml
+++ b/.github/workflows/aws3_lambda.yml
@@ -30,7 +30,7 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: download zip file
-       uses: actions/download-artifact@4.1.9
+       uses: actions/download-artifact@v4.1.8
        with:
          name: spring-aws-s3-lambda
          path: ./Spring_AWS3_Lambda/target
