--- a/Spring_AWS3_Lambda/pom.xml
+++ b/Spring_AWS3_Lambda/pom.xml
@@ -19,7 +19,9 @@
     </parent>
 
     <properties>
-        <java.version>17</java.version>
+        <sonar.organization>kyawyelwin</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <java.version>21</java.version>
         <junit.version>5.11.4</junit.version>
     </properties>
 
