--- a/.github/workflows/aws3_lambda.yml
+++ b/.github/workflows/aws3_lambda.yml
@@ -54,7 +54,7 @@ jobs:
           sleep 10
           STATUS=$(curl -s -u ${{ secrets.SONAR_TOKEN }}: "https://sonarcloud.io/api/qualitygates/project_status?projectKey=kyawyea92_Spring_GitHubAction_AWS3_Lambda" | jq -r .projectStatus.status)
           echo "SonarQube Quality Gate status: $STATUS"
-          if [[ "$STATUS" != "OK" ]]; then
+          if [[ "$STATUS" != "NONE" ]]; then
             echo "Quality gate failed"
             exit 1
           fi
