--- a/.github/workflows/aws3_lambda.yml
+++ b/.github/workflows/aws3_lambda.yml
@@ -120,7 +120,7 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v4.1.8
       with:
-        name: spring_boot_cicd
+        name: spring-aws-s3-lambda
         path: ./Spring_AWS3_Lambda/target
         
     - name: List files in target directory
